--- a/hello-app/Dockerfile
+++ b/hello-app/Dockerfile
@@ -1,16 +1,19 @@
-FROM golang:alpine AS builder
+# FROM golang:alpine AS builder
 
-WORKDIR /app
+# WORKDIR /app
 
-COPY . .
-RUN go mod download 
-ARG TARGETPLATFORM TARGETOS TARGETARCH
-RUN CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH go build -o hello-app main.go
+# COPY . .
+# RUN go mod download 
+# ARG TARGETPLATFORM TARGETOS TARGETARCH
+# RUN CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH go build -o hello-app main.go
 
 FROM alpine
+ARG TARGETARCH HELLO_APP_VERSION
 
 WORKDIR /app
-COPY --from=builder /app/mysettings /app/mysettings
-COPY --from=builder /app/hello-app /app/hello-app
+COPY ./mysettings /app/mysettings
+COPY ./bin/${TARGETARCH}/hello-app /app/hello-app
+
+ENV HELLO_APP_VERSION=$HELLO_APP_VERSION
 
 CMD ["./hello-app"]
